<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/screen_edit_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.Toolbar"
            app:title="@string/toolbar_edit_text_title"
            app:navigationIcon="?attr/homeAsUpIndicator"
            style="@style/toolbarText"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/screen_edit_profile_name"
                    android:gravity="center_horizontal"
                    style="@style/infoText"
                    android:hint="@string/profile_name"/>
                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/screen_edit_profile_bio"
                    android:gravity="center_horizontal"
                    style="@style/infoText"
                    android:hint="@string/profile_bio"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/screen_edit_profile_company"
                    android:gravity="center_horizontal"
                    style="@style/infoText"
                    android:hint="@string/profile_company"/>
                <EditText
                    android:id="@+id/screen_edit_profile_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/profile_location"
                    style="@style/infoText"/>
                <EditText
                    android:id="@+id/screen_edit_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/profile_email"
                    style="@style/infoText"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/screen_edit_profile_blog"
                    android:gravity="center_horizontal"
                    android:hint="@string/profile_blog"
                    style="@style/infoText"/>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>