<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:isScrollContainer="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        style="@style/SectionText"
        android:text="@string/profile_info"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:id="@+id/screen_repository_info_linearlayout"
        android:divider="?android:listDivider"
        android:showDividers="middle">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:id="@+id/screen_repository_info_progress_bar"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/screen_repository_info_field_name"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:id="@+id/screen_repository_info_name"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColorLink="@color/colorPrimaryDark"
                    style="@style/nameText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/profile_name"
                    style="@style/hintText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/screen_repository_info_field_description"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:id="@+id/screen_repository_info_description"
                    style="@style/infoText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/repo_description"
                    style="@style/hintText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/screen_repository_info_field_language"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:id="@+id/screen_repository_info_language"
                    style="@style/infoText"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/repo_lang"
                    style="@style/hintText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/screen_repository_bottom_bar"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/screen_repository_info_field_issue">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/zero"
                        style="@style/infoText"
                        android:textSize="26sp"
                        android:id="@+id/screen_repository_info_issue"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_issues"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/screen_repository_info_field_stargazers">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/screen_repository_info_stargazers"
                            android:text="@string/zero"
                            style="@style/infoText"
                            android:textSize="26sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "@string/repo_stargazers"/>
                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/screen_repository_info_field_forks"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/zero"
                        android:textSize="26sp"
                        style="@style/infoText"
                        android:id="@+id/screen_repository_info_forks"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "@string/repo_forks"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/screen_repository_info_field_watchers"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="26sp"
                        style="@style/infoText"
                        android:id="@+id/screen_repository_info_watchers"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repo_watchers"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:background="@drawable/linear_layout_divider"
                android:layout_width = "match_parent"
                android:layout_height="12dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/SectionText"
            android:text="@string/repo_readme"/>

        <us.feras.mdv.MarkdownView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/screen_repository_info_markdown"
            android:background="@android:color/white"/>

        <ProgressBar
            android:id="@+id/screen_repository_info_markdown_progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/screen_repository_info_readme_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/repo_readme_empty"
            style="@style/hintText"
            android:visibility="gone"/>

        <View
            android:background="@drawable/linear_layout_divider"
            android:layout_width = "match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="12dp"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
